5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1679_1100.log
== TEST (2019-05-02 15:41:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var= int(input("Digite o nome do animal:"))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:41:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var= int(input("Digite o nome do animal:"))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:42:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var= int(input("Digite o nome do animal:"))
print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:43:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula
var= int(input("Digite o nome do animal:"))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:44:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula
var = int(input("Digite o nome do animal:"))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:45:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula
var = int(input("Digite o nome do animal:"))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:46:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula
var = int(input("Digite o nome do animal: ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- ERROR:
File "XXXX", line 5
    var = int(input("Digite o nome do animal: ))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:46:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula
var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:47:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula
var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:47:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:47:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:48:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- EXECUTION TIME:
0.152072
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:48:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- EXECUTION TIME:
0.195665
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:49:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:50:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:50:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:50:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:50:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:50:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 15:50:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
#leia o valor de uma celula

var = int(input("Digite o nome do animal:" ))

print("Entrada:",var)
if(var == 2):
	animal = "Tartaruga"
elif (var == 5):
	animal = "Garca"
elif (var == 10):
	animal = "Arara"
elif (var == 20):
	animal = "Mico-leao-dourado"
elif (var == 50):
	animal = "Onca pintada"
elif (var == 100):
	animal = "Garoupa"
else:
	animal = "Invalido"
print("Animal:",animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
